--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -107,10 +107,10 @@
             background-color: #f8f8fd;
             box-shadow: 0 1px 3px 1px rgba(0, 0, 0, 0.3), 0 0 30px rgba(10, 10, 0, 0.1) inset;
             padding-bottom: 1px;
-            -ms-word-break: break-all;
-            word-break: break-all;
+            -ms-word-break: normal;// break-all;
+            word-break: normal;// break-all;
             /* Non standard for webkit */
-            word-break: break-word;
+            word-break: normal;//break-word;
             -webkit-hyphens: auto;
             -moz-hyphens: auto;
             -ms-hyphens: auto;
